// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Preview 1`] = `
<div data-size="auto">
  <div>
    <div>
      <div>
        <ds-field>
          <label for="<generated>">
            Velg fylker
          </label>
          <ds-suggestion
            data-multiple
            data-display="count"
          >
            <data
              value="Agder"
              aria-label="Agder, Press to remove"
              role="option"
              slot="items"
              tabindex="-1"
            >
              Agder
            </data>
            <data
              value="Rogaland"
              aria-label="Rogaland, Press to remove"
              role="option"
              slot="items"
              tabindex="-1"
            >
              Rogaland
            </data>
            <input
              placeholder
              type="text"
              id="<generated>"
              aria-description="Navigate left to find 2 selected"
              list="<generated>"
              popovertarget="<generated>"
            >
            <button
              aria-label="Tøm"
              hidden
              type="reset"
              aria-hidden="false"
              tabindex="-1"
            >
            </button>
            <u-datalist
              data-nofilter
              data-sr-plural="%d forslag"
              data-sr-singular="%d forslag"
              popover="manual"
              role="listbox"
              data-sr-of="of"
              hidden
              tabindex="-1"
              aria-multiselectable="true"
              id="<generated>"
              data-is-floating="true"
            >
              <u-option
                data-empty
                hidden
                label
                value
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Tomt
              </u-option>
              <u-option
                label="Agder"
                value="Agder"
                selected
                role="option"
                aria-disabled="false"
                aria-selected="true"
                id="<generated>"
              >
                Agder
              </u-option>
              <u-option
                label="Akershus"
                value="Akershus"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Akershus
              </u-option>
              <u-option
                label="Buskerud"
                value="Buskerud"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Buskerud
              </u-option>
              <u-option
                label="Finnmark"
                value="Finnmark"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Finnmark
              </u-option>
              <u-option
                label="Innlandet"
                value="Innlandet"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Innlandet
              </u-option>
              <u-option
                label="Nordland"
                value="Nordland"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Nordland
              </u-option>
              <u-option
                label="Oslo"
                value="Oslo"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Oslo
              </u-option>
              <u-option
                label="Rogaland"
                value="Rogaland"
                selected
                role="option"
                aria-disabled="false"
                aria-selected="true"
                id="<generated>"
              >
                Rogaland
              </u-option>
              <u-option
                label="Telemark"
                value="Telemark"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Telemark
              </u-option>
              <u-option
                label="Troms"
                value="Troms"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Troms
              </u-option>
              <u-option
                label="Trøndelag"
                value="Trøndelag"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Trøndelag
              </u-option>
              <u-option
                label="Vestland"
                value="Vestland"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Vestland
              </u-option>
            </u-datalist>
          </ds-suggestion>
        </ds-field>
        <ds-field>
          <label for="<generated>">
            Velg kommuner
          </label>
          <ds-suggestion
            data-multiple
            data-display="count"
          >
            <data
              value="Arendal"
              aria-label="Arendal, Press to remove"
              role="option"
              slot="items"
              tabindex="-1"
            >
              Arendal
            </data>
            <data
              value="Kristiansand"
              aria-label="Kristiansand, Press to remove"
              role="option"
              slot="items"
              tabindex="-1"
            >
              Kristiansand
            </data>
            <data
              value="Sandnes"
              aria-label="Sandnes, Press to remove"
              role="option"
              slot="items"
              tabindex="-1"
            >
              Sandnes
            </data>
            <input
              placeholder
              type="text"
              id="<generated>"
              aria-description="Navigate left to find 3 selected"
              list="<generated>"
              popovertarget="<generated>"
            >
            <button
              aria-label="Tøm"
              hidden
              type="reset"
              aria-hidden="false"
              tabindex="-1"
            >
            </button>
            <u-datalist
              data-nofilter
              data-sr-plural="%d forslag"
              data-sr-singular="%d forslag"
              popover="manual"
              role="listbox"
              data-sr-of="of"
              hidden
              tabindex="-1"
              aria-multiselectable="true"
              id="<generated>"
              data-is-floating="true"
            >
              <u-option
                data-empty
                hidden
                label
                value
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Tomt
              </u-option>
              <u-option
                label="Arendal"
                value="Arendal"
                selected
                role="option"
                aria-disabled="false"
                aria-selected="true"
                id="<generated>"
              >
                Arendal
              </u-option>
              <u-option
                label="Kristiansand"
                value="Kristiansand"
                selected
                role="option"
                aria-disabled="false"
                aria-selected="true"
                id="<generated>"
              >
                Kristiansand
              </u-option>
              <u-option
                label="Sandnes"
                value="Sandnes"
                selected
                role="option"
                aria-disabled="false"
                aria-selected="true"
                id="<generated>"
              >
                Sandnes
              </u-option>
              <u-option
                label="Stavanger"
                value="Stavanger"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Stavanger
              </u-option>
            </u-datalist>
          </ds-suggestion>
        </ds-field>
        <ds-field>
          <button
            data-variant="tertiary"
            type="button"
            data-size="sm"
          >
            Fjern filtre
          </button>
        </ds-field>
      </div>
      <ds-field>
        <label for="<generated>">
          Søk
        </label>
        <ds-suggestion>
          <input
            aria-label="Søk"
            type="search"
            value
            id="<generated>"
          >
          <button
            data-variant="tertiary"
            type="reset"
            aria-label="Tøm"
            aria-hidden="false"
            hidden
            tabindex="-1"
          >
          </button>
        </ds-suggestion>
      </ds-field>
    </div>
    <table
      data-zebra="true"
      data-color="neutral"
    >
      <thead>
        <tr>
          <th>
            År
          </th>
          <th>
            Skole
          </th>
          <th>
            Org.nummer
          </th>
          <th>
            Skolenavn
          </th>
          <th>
            Fylke
          </th>
          <th>
            Kommune
          </th>
          <th>
            Status
          </th>
          <th>
            Systemnavn
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            2026
          </td>
          <td>
            Alta ungdomsskole
            <br>
            10000001
          </td>
          <td>
            10000001
          </td>
          <td>
            Alta ungdomsskole
          </td>
          <td>
            Agder
          </td>
          <td>
            Arendal
          </td>
          <td>
            <span>
              <span
                aria-hidden="true"
                data-color="success"
              >
              </span>
              Ferdig
            </span>
          </td>
          <td>
            Brukerstøtte
          </td>
        </tr>
        <tr>
          <td>
            2025
          </td>
          <td>
            Arendal videregående skole
            <br>
            10000002
          </td>
          <td>
            10000002
          </td>
          <td>
            Arendal videregående skole
          </td>
          <td>
            Agder
          </td>
          <td>
            Kristiansand
          </td>
          <td>
            <span>
              <span
                aria-hidden="true"
                data-color="warning"
              >
              </span>
              Behandles
            </span>
          </td>
          <td>
            PAS
          </td>
        </tr>
        <tr>
          <td>
            2025
          </td>
          <td>
            Hamar katedralskole
            <br>
            10000008
          </td>
          <td>
            10000008
          </td>
          <td>
            Hamar katedralskole
          </td>
          <td>
            Rogaland
          </td>
          <td>
            Sandnes
          </td>
          <td>
            <span>
              <span
                aria-hidden="true"
                data-color="warning"
              >
              </span>
              Behandles
            </span>
          </td>
          <td>
            PAS
          </td>
        </tr>
        <tr>
          <td>
            2025
          </td>
          <td>
            Stavanger katedralskole
            <br>
            10000014
          </td>
          <td>
            10000014
          </td>
          <td>
            Stavanger katedralskole
          </td>
          <td>
            Agder
          </td>
          <td>
            Arendal
          </td>
          <td>
            <span>
              <span
                aria-hidden="true"
                data-color="warning"
              >
              </span>
              Behandles
            </span>
          </td>
          <td>
            PAS
          </td>
        </tr>
        <tr>
          <td>
            2024
          </td>
          <td>
            Tromsdalen videregående skole
            <br>
            10000015
          </td>
          <td>
            10000015
          </td>
          <td>
            Tromsdalen videregående skole
          </td>
          <td>
            Agder
          </td>
          <td>
            Kristiansand
          </td>
          <td>
            <span>
              <span
                aria-hidden="true"
                data-color="danger"
              >
              </span>
              Avvist
            </span>
          </td>
          <td>
            Prøveadministrasjon
          </td>
        </tr>
      </tbody>
    </table>
    <div>
      <ds-pagination
        aria-label="Sidenavigering"
        data-size="sm"
        role="navigation"
      >
        <ul>
          <li>
            <button
              type="button"
              aria-label="Forrige side"
              aria-disabled="true"
            >
            </button>
          </li>
          <li>
            <button
              type="button"
              aria-current="true"
              aria-label="Side 1"
            >
              1
            </button>
          </li>
          <li>
            <button
              type="button"
              aria-label="Side 2"
            >
              2
            </button>
          </li>
          <li>
            <button
              type="button"
              aria-label="Neste side"
            >
            </button>
          </li>
        </ul>
      </ds-pagination>
      <div>
        <span>
          Rad 1-5 av 9
        </span>
        <ds-field>
          <label for="<generated>">
            Rader per side
          </label>
          <select
            autocomplete="off"
            id="<generated>"
          >
            <option value="5">
              5
            </option>
            <option value="10">
              10
            </option>
            <option value="25">
              25
            </option>
            <option value="50">
              50
            </option>
          </select>
        </ds-field>
      </div>
    </div>
  </div>
</div>
`;

exports[`With Chips 1`] = `
<div data-size="auto">
  <div>
    <div>
      <div>
        <ds-field>
          <label for="<generated>">
            Velg fylker
          </label>
          <ds-suggestion
            data-multiple
            data-display="count"
          >
            <data
              value="Agder"
              aria-label="Agder, Press to remove"
              role="option"
              slot="items"
              tabindex="-1"
            >
              Agder
            </data>
            <data
              value="Rogaland"
              aria-label="Rogaland, Press to remove"
              role="option"
              slot="items"
              tabindex="-1"
            >
              Rogaland
            </data>
            <input
              placeholder
              type="text"
              id="<generated>"
              aria-description="Navigate left to find 2 selected"
              list="<generated>"
              popovertarget="<generated>"
            >
            <button
              aria-label="Tøm"
              hidden
              type="reset"
              aria-hidden="false"
              tabindex="-1"
            >
            </button>
            <u-datalist
              data-nofilter
              data-sr-plural="%d forslag"
              data-sr-singular="%d forslag"
              popover="manual"
              role="listbox"
              data-sr-of="of"
              hidden
              tabindex="-1"
              aria-multiselectable="true"
              id="<generated>"
              data-is-floating="true"
            >
              <u-option
                data-empty
                hidden
                label
                value
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Tomt
              </u-option>
              <u-option
                label="Agder"
                value="Agder"
                selected
                role="option"
                aria-disabled="false"
                aria-selected="true"
                id="<generated>"
              >
                Agder
              </u-option>
              <u-option
                label="Akershus"
                value="Akershus"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Akershus
              </u-option>
              <u-option
                label="Buskerud"
                value="Buskerud"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Buskerud
              </u-option>
              <u-option
                label="Finnmark"
                value="Finnmark"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Finnmark
              </u-option>
              <u-option
                label="Innlandet"
                value="Innlandet"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Innlandet
              </u-option>
              <u-option
                label="Nordland"
                value="Nordland"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Nordland
              </u-option>
              <u-option
                label="Oslo"
                value="Oslo"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Oslo
              </u-option>
              <u-option
                label="Rogaland"
                value="Rogaland"
                selected
                role="option"
                aria-disabled="false"
                aria-selected="true"
                id="<generated>"
              >
                Rogaland
              </u-option>
              <u-option
                label="Telemark"
                value="Telemark"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Telemark
              </u-option>
              <u-option
                label="Troms"
                value="Troms"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Troms
              </u-option>
              <u-option
                label="Trøndelag"
                value="Trøndelag"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Trøndelag
              </u-option>
              <u-option
                label="Vestland"
                value="Vestland"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Vestland
              </u-option>
            </u-datalist>
          </ds-suggestion>
        </ds-field>
        <ds-field>
          <label for="<generated>">
            Velg kommuner
          </label>
          <ds-suggestion
            data-multiple
            data-display="count"
          >
            <data
              value="Arendal"
              aria-label="Arendal, Press to remove"
              role="option"
              slot="items"
              tabindex="-1"
            >
              Arendal
            </data>
            <data
              value="Kristiansand"
              aria-label="Kristiansand, Press to remove"
              role="option"
              slot="items"
              tabindex="-1"
            >
              Kristiansand
            </data>
            <data
              value="Sandnes"
              aria-label="Sandnes, Press to remove"
              role="option"
              slot="items"
              tabindex="-1"
            >
              Sandnes
            </data>
            <input
              placeholder
              type="text"
              id="<generated>"
              aria-description="Navigate left to find 3 selected"
              list="<generated>"
              popovertarget="<generated>"
            >
            <button
              aria-label="Tøm"
              hidden
              type="reset"
              aria-hidden="false"
              tabindex="-1"
            >
            </button>
            <u-datalist
              data-nofilter
              data-sr-plural="%d forslag"
              data-sr-singular="%d forslag"
              popover="manual"
              role="listbox"
              data-sr-of="of"
              hidden
              tabindex="-1"
              aria-multiselectable="true"
              id="<generated>"
              data-is-floating="true"
            >
              <u-option
                data-empty
                hidden
                label
                value
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Tomt
              </u-option>
              <u-option
                label="Arendal"
                value="Arendal"
                selected
                role="option"
                aria-disabled="false"
                aria-selected="true"
                id="<generated>"
              >
                Arendal
              </u-option>
              <u-option
                label="Kristiansand"
                value="Kristiansand"
                selected
                role="option"
                aria-disabled="false"
                aria-selected="true"
                id="<generated>"
              >
                Kristiansand
              </u-option>
              <u-option
                label="Sandnes"
                value="Sandnes"
                selected
                role="option"
                aria-disabled="false"
                aria-selected="true"
                id="<generated>"
              >
                Sandnes
              </u-option>
              <u-option
                label="Stavanger"
                value="Stavanger"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<generated>"
              >
                Stavanger
              </u-option>
            </u-datalist>
          </ds-suggestion>
        </ds-field>
        <ds-field>
          <button
            data-variant="tertiary"
            type="button"
            data-size="sm"
          >
            Fjern filtre
          </button>
        </ds-field>
      </div>
      <ds-field>
        <label for="<generated>">
          Søk
        </label>
        <ds-suggestion>
          <input
            aria-label="Søk"
            type="search"
            value
            id="<generated>"
          >
          <button
            data-variant="tertiary"
            type="reset"
            aria-label="Tøm"
            aria-hidden="false"
            hidden
            tabindex="-1"
          >
          </button>
        </ds-suggestion>
      </ds-field>
    </div>
    <div>
      <div>
        <label>
          Fylke
        </label>
        <ul>
          <li>
            <button
              type="button"
              data-removable="true"
              aria-label="Fjern Agder"
            >
              Agder
            </button>
          </li>
          <li>
            <button
              type="button"
              data-removable="true"
              aria-label="Fjern Rogaland"
            >
              Rogaland
            </button>
          </li>
        </ul>
      </div>
      <div>
        <label>
          Kommune
        </label>
        <ul>
          <li>
            <button
              type="button"
              data-removable="true"
              aria-label="Fjern Arendal"
            >
              Arendal
            </button>
          </li>
          <li>
            <button
              type="button"
              data-removable="true"
              aria-label="Fjern Kristiansand"
            >
              Kristiansand
            </button>
          </li>
          <li>
            <button
              type="button"
              data-removable="true"
              aria-label="Fjern Sandnes"
            >
              Sandnes
            </button>
          </li>
        </ul>
      </div>
    </div>
    <table
      data-zebra="true"
      data-color="neutral"
    >
      <thead>
        <tr>
          <th>
            År
          </th>
          <th>
            Skole
          </th>
          <th>
            Org.nummer
          </th>
          <th>
            Skolenavn
          </th>
          <th>
            Fylke
          </th>
          <th>
            Kommune
          </th>
          <th>
            Status
          </th>
          <th>
            Systemnavn
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            2026
          </td>
          <td>
            Alta ungdomsskole
            <br>
            10000001
          </td>
          <td>
            10000001
          </td>
          <td>
            Alta ungdomsskole
          </td>
          <td>
            Agder
          </td>
          <td>
            Arendal
          </td>
          <td>
            <span>
              <span
                aria-hidden="true"
                data-color="success"
              >
              </span>
              Ferdig
            </span>
          </td>
          <td>
            Brukerstøtte
          </td>
        </tr>
        <tr>
          <td>
            2025
          </td>
          <td>
            Arendal videregående skole
            <br>
            10000002
          </td>
          <td>
            10000002
          </td>
          <td>
            Arendal videregående skole
          </td>
          <td>
            Agder
          </td>
          <td>
            Kristiansand
          </td>
          <td>
            <span>
              <span
                aria-hidden="true"
                data-color="warning"
              >
              </span>
              Behandles
            </span>
          </td>
          <td>
            PAS
          </td>
        </tr>
        <tr>
          <td>
            2025
          </td>
          <td>
            Hamar katedralskole
            <br>
            10000008
          </td>
          <td>
            10000008
          </td>
          <td>
            Hamar katedralskole
          </td>
          <td>
            Rogaland
          </td>
          <td>
            Sandnes
          </td>
          <td>
            <span>
              <span
                aria-hidden="true"
                data-color="warning"
              >
              </span>
              Behandles
            </span>
          </td>
          <td>
            PAS
          </td>
        </tr>
        <tr>
          <td>
            2025
          </td>
          <td>
            Stavanger katedralskole
            <br>
            10000014
          </td>
          <td>
            10000014
          </td>
          <td>
            Stavanger katedralskole
          </td>
          <td>
            Agder
          </td>
          <td>
            Arendal
          </td>
          <td>
            <span>
              <span
                aria-hidden="true"
                data-color="warning"
              >
              </span>
              Behandles
            </span>
          </td>
          <td>
            PAS
          </td>
        </tr>
        <tr>
          <td>
            2024
          </td>
          <td>
            Tromsdalen videregående skole
            <br>
            10000015
          </td>
          <td>
            10000015
          </td>
          <td>
            Tromsdalen videregående skole
          </td>
          <td>
            Agder
          </td>
          <td>
            Kristiansand
          </td>
          <td>
            <span>
              <span
                aria-hidden="true"
                data-color="danger"
              >
              </span>
              Avvist
            </span>
          </td>
          <td>
            Prøveadministrasjon
          </td>
        </tr>
      </tbody>
    </table>
    <div>
      <ds-pagination
        aria-label="Sidenavigering"
        data-size="sm"
        role="navigation"
      >
        <ul>
          <li>
            <button
              type="button"
              aria-label="Forrige side"
              aria-disabled="true"
            >
            </button>
          </li>
          <li>
            <button
              type="button"
              aria-current="true"
              aria-label="Side 1"
            >
              1
            </button>
          </li>
          <li>
            <button
              type="button"
              aria-label="Side 2"
            >
              2
            </button>
          </li>
          <li>
            <button
              type="button"
              aria-label="Neste side"
            >
            </button>
          </li>
        </ul>
      </ds-pagination>
      <div>
        <span>
          Rad 1-5 av 9
        </span>
        <ds-field>
          <label for="<generated>">
            Rader per side
          </label>
          <select
            autocomplete="off"
            id="<generated>"
          >
            <option value="5">
              5
            </option>
            <option value="10">
              10
            </option>
            <option value="25">
              25
            </option>
            <option value="50">
              50
            </option>
          </select>
        </ds-field>
      </div>
    </div>
  </div>
</div>
`;

exports[`With Dialog 1`] = `
<div data-size="auto">
  <div>
    <div>
      <ds-field>
        <label for="<generated>">
          Søk
        </label>
        <ds-suggestion>
          <input
            aria-label="Søk"
            type="search"
            value
            id="<generated>"
          >
          <button
            data-variant="tertiary"
            type="reset"
            aria-label="Tøm"
            aria-hidden="false"
            hidden
            tabindex="-1"
          >
          </button>
        </ds-suggestion>
      </ds-field>
      <div>
        <button
          data-variant="secondary"
          type="button"
          aria-haspopup="dialog"
        >
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              fill-rule="evenodd"
              d="M3.25 7A.75.75 0 0 1 4 6.25h16a.75.75 0 0 1 0 1.5H4A.75.75 0 0 1 3.25 7m3 5a.75.75 0 0 1 .75-.75h10a.75.75 0 0 1 0 1.5H7a.75.75 0 0 1-.75-.75M10 16.25a.75.75 0 0 0 0 1.5h4a.75.75 0 0 0 0-1.5z"
              clip-rule="evenodd"
            >
            </path>
          </svg>
          Filter
        </button>
        <dialog
          data-placement="center"
          data-modal="true"
          id="<generated>"
          closedby="any"
        >
          <button
            data-icon="true"
            commandfor="<generated>"
            data-variant="tertiary"
            type="button"
            aria-label="Lukk dialogvindu"
            data-color="neutral"
            command="close"
          >
          </button>
          <div>
            <h2>
              Filter
            </h2>
            <div>
              <div>
                <ds-field>
                  <label for="<generated>">
                    År
                  </label>
                  <ds-suggestion
                    data-multiple
                    data-display="count"
                  >
                    <input
                      placeholder
                      type="text"
                      id="<generated>"
                      aria-description="No selected"
                      list="<generated>"
                      popovertarget="<generated>"
                    >
                    <button
                      aria-label="Tøm"
                      hidden
                      type="reset"
                      aria-hidden="false"
                      tabindex="-1"
                    >
                    </button>
                    <u-datalist
                      data-nofilter
                      data-sr-plural="%d forslag"
                      data-sr-singular="%d forslag"
                      popover="manual"
                      role="listbox"
                      data-sr-of="of"
                      hidden
                      tabindex="-1"
                      aria-multiselectable="true"
                      id="<generated>"
                      data-is-floating="true"
                    >
                      <u-option
                        data-empty
                        hidden
                        label
                        value
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        Tomt
                      </u-option>
                      <u-option
                        label="2026"
                        value="2026"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        2026
                      </u-option>
                      <u-option
                        label="2025"
                        value="2025"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        2025
                      </u-option>
                      <u-option
                        label="2024"
                        value="2024"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        2024
                      </u-option>
                    </u-datalist>
                  </ds-suggestion>
                </ds-field>
                <ds-field>
                  <label for="<generated>">
                    Fylke
                  </label>
                  <ds-suggestion
                    data-multiple
                    data-display="count"
                  >
                    <data
                      value="Agder"
                      aria-label="Agder, Press to remove"
                      role="option"
                      slot="items"
                      tabindex="-1"
                    >
                      Agder
                    </data>
                    <data
                      value="Rogaland"
                      aria-label="Rogaland, Press to remove"
                      role="option"
                      slot="items"
                      tabindex="-1"
                    >
                      Rogaland
                    </data>
                    <input
                      placeholder
                      type="text"
                      id="<generated>"
                      aria-description="Navigate left to find 2 selected"
                      list="<generated>"
                      popovertarget="<generated>"
                    >
                    <button
                      aria-label="Tøm"
                      hidden
                      type="reset"
                      aria-hidden="false"
                      tabindex="-1"
                    >
                    </button>
                    <u-datalist
                      data-nofilter
                      data-sr-plural="%d forslag"
                      data-sr-singular="%d forslag"
                      popover="manual"
                      role="listbox"
                      data-sr-of="of"
                      hidden
                      tabindex="-1"
                      aria-multiselectable="true"
                      id="<generated>"
                      data-is-floating="true"
                    >
                      <u-option
                        data-empty
                        hidden
                        label
                        value
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        Tomt
                      </u-option>
                      <u-option
                        label="Agder"
                        value="Agder"
                        selected
                        role="option"
                        aria-disabled="false"
                        aria-selected="true"
                        id="<generated>"
                      >
                        Agder
                      </u-option>
                      <u-option
                        label="Akershus"
                        value="Akershus"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        Akershus
                      </u-option>
                      <u-option
                        label="Buskerud"
                        value="Buskerud"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        Buskerud
                      </u-option>
                      <u-option
                        label="Finnmark"
                        value="Finnmark"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        Finnmark
                      </u-option>
                      <u-option
                        label="Innlandet"
                        value="Innlandet"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        Innlandet
                      </u-option>
                      <u-option
                        label="Nordland"
                        value="Nordland"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        Nordland
                      </u-option>
                      <u-option
                        label="Oslo"
                        value="Oslo"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        Oslo
                      </u-option>
                      <u-option
                        label="Rogaland"
                        value="Rogaland"
                        selected
                        role="option"
                        aria-disabled="false"
                        aria-selected="true"
                        id="<generated>"
                      >
                        Rogaland
                      </u-option>
                      <u-option
                        label="Telemark"
                        value="Telemark"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        Telemark
                      </u-option>
                      <u-option
                        label="Troms"
                        value="Troms"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        Troms
                      </u-option>
                      <u-option
                        label="Trøndelag"
                        value="Trøndelag"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        Trøndelag
                      </u-option>
                      <u-option
                        label="Vestland"
                        value="Vestland"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        Vestland
                      </u-option>
                    </u-datalist>
                  </ds-suggestion>
                </ds-field>
                <ds-field>
                  <label for="<generated>">
                    Kommune
                  </label>
                  <ds-suggestion
                    data-multiple
                    data-display="count"
                  >
                    <data
                      value="Arendal"
                      aria-label="Arendal, Press to remove"
                      role="option"
                      slot="items"
                      tabindex="-1"
                    >
                      Arendal
                    </data>
                    <data
                      value="Kristiansand"
                      aria-label="Kristiansand, Press to remove"
                      role="option"
                      slot="items"
                      tabindex="-1"
                    >
                      Kristiansand
                    </data>
                    <data
                      value="Sandnes"
                      aria-label="Sandnes, Press to remove"
                      role="option"
                      slot="items"
                      tabindex="-1"
                    >
                      Sandnes
                    </data>
                    <input
                      placeholder
                      type="text"
                      id="<generated>"
                      aria-description="Navigate left to find 3 selected"
                      list="<generated>"
                      popovertarget="<generated>"
                    >
                    <button
                      aria-label="Tøm"
                      hidden
                      type="reset"
                      aria-hidden="false"
                      tabindex="-1"
                    >
                    </button>
                    <u-datalist
                      data-nofilter
                      data-sr-plural="%d forslag"
                      data-sr-singular="%d forslag"
                      popover="manual"
                      role="listbox"
                      data-sr-of="of"
                      hidden
                      tabindex="-1"
                      aria-multiselectable="true"
                      id="<generated>"
                      data-is-floating="true"
                    >
                      <u-option
                        data-empty
                        hidden
                        label
                        value
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        Tomt
                      </u-option>
                      <u-option
                        label="Arendal"
                        value="Arendal"
                        selected
                        role="option"
                        aria-disabled="false"
                        aria-selected="true"
                        id="<generated>"
                      >
                        Arendal
                      </u-option>
                      <u-option
                        label="Kristiansand"
                        value="Kristiansand"
                        selected
                        role="option"
                        aria-disabled="false"
                        aria-selected="true"
                        id="<generated>"
                      >
                        Kristiansand
                      </u-option>
                      <u-option
                        label="Sandnes"
                        value="Sandnes"
                        selected
                        role="option"
                        aria-disabled="false"
                        aria-selected="true"
                        id="<generated>"
                      >
                        Sandnes
                      </u-option>
                      <u-option
                        label="Stavanger"
                        value="Stavanger"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        Stavanger
                      </u-option>
                    </u-datalist>
                  </ds-suggestion>
                </ds-field>
              </div>
              <div>
                <fieldset aria-labelledby="<generated>">
                  <legend id="<generated>">
                    Status
                  </legend>
                  <ds-field data-clickdelegatefor="<generated>">
                    <input
                      type="checkbox"
                      value="Ferdig"
                      name="dialog-status"
                      id="<generated>"
                    >
                    <label
                      data-weight="regular"
                      for="<generated>"
                    >
                      Ferdig
                    </label>
                  </ds-field>
                  <ds-field data-clickdelegatefor="<generated>">
                    <input
                      type="checkbox"
                      value="Behandles"
                      name="dialog-status"
                      id="<generated>"
                    >
                    <label
                      data-weight="regular"
                      for="<generated>"
                    >
                      Behandles
                    </label>
                  </ds-field>
                  <ds-field data-clickdelegatefor="<generated>">
                    <input
                      type="checkbox"
                      value="Avvist"
                      name="dialog-status"
                      id="<generated>"
                    >
                    <label
                      data-weight="regular"
                      for="<generated>"
                    >
                      Avvist
                    </label>
                  </ds-field>
                </fieldset>
                <ds-field>
                  <label for="<generated>">
                    Systemnavn
                  </label>
                  <ds-suggestion
                    data-multiple
                    data-display="count"
                  >
                    <input
                      placeholder
                      type="text"
                      id="<generated>"
                      aria-description="No selected"
                      list="<generated>"
                      popovertarget="<generated>"
                    >
                    <button
                      aria-label="Tøm"
                      hidden
                      type="reset"
                      aria-hidden="false"
                      tabindex="-1"
                    >
                    </button>
                    <u-datalist
                      data-nofilter
                      data-sr-plural="%d forslag"
                      data-sr-singular="%d forslag"
                      popover="manual"
                      role="listbox"
                      data-sr-of="of"
                      hidden
                      tabindex="-1"
                      aria-multiselectable="true"
                      id="<generated>"
                      data-is-floating="true"
                    >
                      <u-option
                        data-empty
                        hidden
                        label
                        value
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        Tomt
                      </u-option>
                      <u-option
                        label="Brukerstøtte"
                        value="Brukerstøtte"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        Brukerstøtte
                      </u-option>
                      <u-option
                        label="PAS"
                        value="PAS"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        PAS
                      </u-option>
                      <u-option
                        label="Prøveadministrasjon"
                        value="Prøveadministrasjon"
                        role="option"
                        aria-disabled="false"
                        aria-selected="false"
                        id="<generated>"
                      >
                        Prøveadministrasjon
                      </u-option>
                    </u-datalist>
                  </ds-suggestion>
                </ds-field>
              </div>
            </div>
            <div>
              <button type="button">
                Lagre
              </button>
              <button
                data-variant="secondary"
                type="button"
              >
                Avbryt
              </button>
            </div>
          </div>
        </dialog>
        <button
          data-variant="tertiary"
          type="button"
          data-size="sm"
        >
          Fjern filtre
        </button>
      </div>
    </div>
    <div>
      <div>
        <label>
          Fylke
        </label>
        <ul>
          <li>
            <button
              type="button"
              data-removable="true"
              aria-label="Fjern Agder"
            >
              Agder
            </button>
          </li>
          <li>
            <button
              type="button"
              data-removable="true"
              aria-label="Fjern Rogaland"
            >
              Rogaland
            </button>
          </li>
        </ul>
      </div>
      <div>
        <label>
          Kommune
        </label>
        <ul>
          <li>
            <button
              type="button"
              data-removable="true"
              aria-label="Fjern Arendal"
            >
              Arendal
            </button>
          </li>
          <li>
            <button
              type="button"
              data-removable="true"
              aria-label="Fjern Kristiansand"
            >
              Kristiansand
            </button>
          </li>
          <li>
            <button
              type="button"
              data-removable="true"
              aria-label="Fjern Sandnes"
            >
              Sandnes
            </button>
          </li>
        </ul>
      </div>
    </div>
    <table
      data-zebra="true"
      data-color="neutral"
    >
      <thead>
        <tr>
          <th>
            År
          </th>
          <th>
            Skole
          </th>
          <th>
            Org.nummer
          </th>
          <th>
            Skolenavn
          </th>
          <th>
            Fylke
          </th>
          <th>
            Kommune
          </th>
          <th>
            Status
          </th>
          <th>
            Systemnavn
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            2026
          </td>
          <td>
            Alta ungdomsskole
            <br>
            10000001
          </td>
          <td>
            10000001
          </td>
          <td>
            Alta ungdomsskole
          </td>
          <td>
            Agder
          </td>
          <td>
            Arendal
          </td>
          <td>
            <span>
              <span
                aria-hidden="true"
                data-color="success"
              >
              </span>
              Ferdig
            </span>
          </td>
          <td>
            Brukerstøtte
          </td>
        </tr>
        <tr>
          <td>
            2025
          </td>
          <td>
            Arendal videregående skole
            <br>
            10000002
          </td>
          <td>
            10000002
          </td>
          <td>
            Arendal videregående skole
          </td>
          <td>
            Agder
          </td>
          <td>
            Kristiansand
          </td>
          <td>
            <span>
              <span
                aria-hidden="true"
                data-color="warning"
              >
              </span>
              Behandles
            </span>
          </td>
          <td>
            PAS
          </td>
        </tr>
        <tr>
          <td>
            2025
          </td>
          <td>
            Hamar katedralskole
            <br>
            10000008
          </td>
          <td>
            10000008
          </td>
          <td>
            Hamar katedralskole
          </td>
          <td>
            Rogaland
          </td>
          <td>
            Sandnes
          </td>
          <td>
            <span>
              <span
                aria-hidden="true"
                data-color="warning"
              >
              </span>
              Behandles
            </span>
          </td>
          <td>
            PAS
          </td>
        </tr>
        <tr>
          <td>
            2025
          </td>
          <td>
            Stavanger katedralskole
            <br>
            10000014
          </td>
          <td>
            10000014
          </td>
          <td>
            Stavanger katedralskole
          </td>
          <td>
            Agder
          </td>
          <td>
            Arendal
          </td>
          <td>
            <span>
              <span
                aria-hidden="true"
                data-color="warning"
              >
              </span>
              Behandles
            </span>
          </td>
          <td>
            PAS
          </td>
        </tr>
        <tr>
          <td>
            2024
          </td>
          <td>
            Tromsdalen videregående skole
            <br>
            10000015
          </td>
          <td>
            10000015
          </td>
          <td>
            Tromsdalen videregående skole
          </td>
          <td>
            Agder
          </td>
          <td>
            Kristiansand
          </td>
          <td>
            <span>
              <span
                aria-hidden="true"
                data-color="danger"
              >
              </span>
              Avvist
            </span>
          </td>
          <td>
            Prøveadministrasjon
          </td>
        </tr>
      </tbody>
    </table>
    <div>
      <ds-pagination
        aria-label="Sidenavigering"
        data-size="sm"
        role="navigation"
      >
        <ul>
          <li>
            <button
              type="button"
              aria-label="Forrige side"
              aria-disabled="true"
            >
            </button>
          </li>
          <li>
            <button
              type="button"
              aria-current="true"
              aria-label="Side 1"
            >
              1
            </button>
          </li>
          <li>
            <button
              type="button"
              aria-label="Side 2"
            >
              2
            </button>
          </li>
          <li>
            <button
              type="button"
              aria-label="Neste side"
            >
            </button>
          </li>
        </ul>
      </ds-pagination>
      <div>
        <span>
          Rad 1-5 av 9
        </span>
        <ds-field>
          <label for="<generated>">
            Rader per side
          </label>
          <select
            autocomplete="off"
            id="<generated>"
          >
            <option value="5">
              5
            </option>
            <option value="10">
              10
            </option>
            <option value="25">
              25
            </option>
            <option value="50">
              50
            </option>
          </select>
        </ds-field>
      </div>
    </div>
  </div>
</div>
`;
